--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,7 @@
       <dependency>
          <groupId>com.google.guava</groupId>
          <artifactId>guava</artifactId>
-         <version>19.0</version>
+         <version>28.0-jre</version>
       </dependency>
       <dependency>
          <groupId>ch.qos.logback</groupId>
