--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,15 @@ services:
          - ./schemas:/var/lib/vyne/schemas
       environment:
          OPTIONS: --taxi.project-home=/var/lib/vyne/schemas --eureka.uri=http://vyne:9022
+
+   cask:
+      image: vyneco/cask:latest-snapshot
+      depends_on:
+         - vyne
+      environment:
+         PROFILE: local
+         OPTIONS: --eureka.uri=http://vyne:9022
+      ports:
+         - 5701-5721
+         - 5432:5432
+         - 8800:8800
