Client side bundling fix

--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -32,6 +32,7 @@
     "@materia-ui/ngx-monaco-editor": "^2.0.7",
     "@ng-select/ng-select": "^2.20.5",
     "@swimlane/ngx-graph": "^5.5.0",
+    "@types/angular": "^1.7.0",
     "class-transformer": "^0.2.0",
     "core-js": "^2.5.4",
     "highlight.js": "^9.17.1",
@@ -49,7 +50,6 @@
     "process": "^0.11.10",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "rich-markdown-editor": "^9.11.2",
     "rxjs": "^6.4.0",
     "stream": "0.0.2",
     "tslib": "^1.9.0",
