--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -135,7 +135,7 @@
                      <goal>npm</goal>
                   </goals>
                   <configuration>
-                     <arguments>run-script build</arguments>
+                     <arguments>run-script build-prod</arguments>
                   </configuration>
                </execution>
             </executions>
