LENS-64 Added BEFORE_START_COMMAND environment variable to all the containers, this will allow to execute wait on other services logic

--- a/file-schema-server/Dockerfile
+++ b/file-schema-server/Dockerfile
@@ -4,4 +4,4 @@ COPY target/file-schema-server.jar /opt/service/
 
 WORKDIR /opt/service/
 
-CMD java $JVM_OPTS -jar -Dspring.profiles.active=${PROFILE} file-schema-server.jar $OPTIONS
+CMD $BEFORE_START_COMMAND && java $JVM_OPTS -jar -Dspring.profiles.active=${PROFILE} file-schema-server.jar $OPTIONS
