--- a/pipelines/pipelines-orchestrator/Dockerfile
+++ b/pipelines/pipelines-orchestrator/Dockerfile
@@ -4,4 +4,4 @@ COPY target/pipelines-orchestrator.jar /opt/service/
 
 WORKDIR /opt/service/
 
-CMD java $JVM_OPTS -jar -Dspring.profiles.active=${PROFILE} pipelines-orchestrator.jar $OPTIONS
+CMD $BEFORE_START_COMMAND && java $JVM_OPTS -jar -Dspring.profiles.active=${PROFILE} pipelines-orchestrator.jar $OPTIONS
