--- a/vyne-query-service/Dockerfile
+++ b/vyne-query-service/Dockerfile
@@ -4,4 +4,4 @@ COPY target/vyne-query-service.jar /opt/service/
 
 WORKDIR /opt/service/
 
-CMD java $JVM_OPTS -jar -Dspring.profiles.active=${PROFILE} vyne-query-service.jar $OPTIONS
+CMD $BEFORE_START_COMMAND && java $JVM_OPTS -jar -Dspring.profiles.active=${PROFILE} vyne-query-service.jar $OPTIONS
