--- a/file-schema-server/src/main/resources/application.yml
+++ b/file-schema-server/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 taxi:
-   project-home: /home/marty/dev/cacib/taxonomy
+   schema-local-storage: /home/marty/dev/cacib/taxonomy
 spring:
    application:
       name: file-schema-server
