Feign timeout increased

--- a/pipelines/pipeline-runner-app/src/main/resources/application.yml
+++ b/pipelines/pipeline-runner-app/src/main/resources/application.yml
@@ -8,3 +8,10 @@ server:
 service:
    cask:
       name: cask
+
+feign:
+   client:
+      config:
+         default:
+            connectTimeout: 2000
+            readTimeout: 2000
