--- a/vyne-core-types/pom.xml
+++ b/vyne-core-types/pom.xml
@@ -18,6 +18,10 @@
          <artifactId>jackson-annotations</artifactId>
       </dependency>
       <dependency>
+         <groupId>com.fasterxml.jackson.datatype</groupId>
+         <artifactId>jackson-datatype-jsr310</artifactId>
+      </dependency>
+      <dependency>
          <groupId>com.github.zafarkhaja</groupId>
          <artifactId>java-semver</artifactId>
          <version>0.9.0</version>
