--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -50,6 +50,7 @@
     "process": "^0.11.10",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "rich-markdown-editor": "^9.11.2",
     "rxjs": "^6.4.0",
     "stream": "0.0.2",
     "tslib": "^1.9.0",
