LENS-80 Throwing error with meaningful description when unable to extract value to create TypedInstance object

--- a/cask/pom.xml
+++ b/cask/pom.xml
@@ -33,6 +33,20 @@
             <artifactId>postgresql</artifactId>
         </dependency>
 
+       <!-- Spring boot actuator/micrometer/prometheus dependencies -->
+       <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-actuator</artifactId>
+       </dependency>
+       <dependency>
+          <groupId>io.micrometer</groupId>
+          <artifactId>micrometer-core</artifactId>
+       </dependency>
+       <dependency>
+          <groupId>io.micrometer</groupId>
+          <artifactId>micrometer-registry-prometheus</artifactId>
+       </dependency>
+
         <dependency>
             <groupId>lang.taxi</groupId>
             <artifactId>compiler</artifactId>
