--- a/cask/src/main/resources/application.yml
+++ b/cask/src/main/resources/application.yml
@@ -6,3 +6,19 @@ spring:
 
 server:
   port: 8800
+
+# Actuators + prometheus metrics configuration
+management:
+   endpoint:
+      metrics:
+         enabled: true
+      prometheus:
+         enabled: true
+   endpoints:
+      web:
+         exposure:
+            include: prometheus,metrics,info,health
+   metrics:
+      export:
+         prometheus:
+            enabled: true
