First Orchestrator implementation

--- a/pipelines/pipelines-orchestrator/src/main/resources/application.yml
+++ b/pipelines/pipelines-orchestrator/src/main/resources/application.yml
@@ -4,3 +4,10 @@ spring:
 
 server:
    port: 9600
+
+feign:
+   client:
+      config:
+         default:
+            connectTimeout: 3000
+            readTimeout: 3000
