--- a/vyne-ql/vyne-ql-compiler/pom.xml
+++ b/vyne-ql/vyne-ql-compiler/pom.xml
@@ -32,6 +32,11 @@
          <version>0.3.0-SNAPSHOT</version>
       </dependency>
       <dependency>
+         <groupId>io.vyne</groupId>
+         <artifactId>vyne-taxi</artifactId>
+         <version>0.3.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
          <groupId>org.antlr</groupId>
          <artifactId>antlr4-runtime</artifactId>
          <version>${antlr.version}</version>
