--- a/cask/pom.xml
+++ b/cask/pom.xml
@@ -110,6 +110,12 @@
             <version>0.13.3</version>
             <scope>test</scope>
         </dependency>
+       <dependency>
+          <groupId>org.skyscreamer</groupId>
+          <artifactId>jsonassert</artifactId>
+          <version>1.5.0</version>
+          <scope>test</scope>
+       </dependency>
     </dependencies>
 
     <build>
