--- a/vyne-core-types/pom.xml
+++ b/vyne-core-types/pom.xml
@@ -73,5 +73,12 @@
          <artifactId>package-repository-api</artifactId>
          <version>${taxi.version}</version>
       </dependency>
+
+      <dependency>
+         <groupId>com.nhaarman.mockitokotlin2</groupId>
+         <artifactId>mockito-kotlin</artifactId>
+         <version>2.2.0</version>
+         <scope>test</scope>
+      </dependency>
    </dependencies>
 </project>
