--- a/utils/pom.xml
+++ b/utils/pom.xml
@@ -11,5 +11,11 @@
 
    <artifactId>utils</artifactId>
 
+   <dependencies>
+      <dependency>
+         <groupId>com.google.guava</groupId>
+         <artifactId>guava</artifactId>
+      </dependency>
+   </dependencies>
 
 </project>
