--- a/cask/pom.xml
+++ b/cask/pom.xml
@@ -32,6 +32,11 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
         </dependency>
+       <dependency>
+          <groupId>org.flywaydb</groupId>
+          <artifactId>flyway-core</artifactId>
+          <version>6.4.3</version>
+       </dependency>
 
        <!-- Spring boot actuator/micrometer/prometheus dependencies -->
        <dependency>
