--- a/cask/src/main/resources/application-local.yml
+++ b/cask/src/main/resources/application-local.yml
@@ -16,3 +16,11 @@ spring.datasource:
   url: "jdbc:postgresql://localhost:5432/vynedb"
   username: "vynedb"
   password: "vynedb"
+
+spring:
+   flyway:
+      url: ${spring.datasource.url}
+      user: ${spring.datasource.username}
+      password: ${spring.datasource.password}
+      enabled: true
+      locations: classpath:db/migration
