--- a/pipelines/pipeline-runner-app/pom.xml
+++ b/pipelines/pipeline-runner-app/pom.xml
@@ -31,6 +31,10 @@
          <type>test-jar</type>
          <scope>test</scope>
       </dependency>
+      <dependency>
+         <groupId>net.logstash.logback</groupId>
+         <artifactId>logstash-logback-encoder</artifactId>
+      </dependency>
 
    </dependencies>
 
