--- a/file-schema-server/pom.xml
+++ b/file-schema-server/pom.xml
@@ -46,6 +46,10 @@
          <optional>true</optional>
       </dependency>
       <dependency>
+         <groupId>net.logstash.logback</groupId>
+         <artifactId>logstash-logback-encoder</artifactId>
+      </dependency>
+      <dependency>
          <groupId>org.eclipse.jgit</groupId>
          <artifactId>org.eclipse.jgit</artifactId>
          <version>5.7.0.202003110725-r</version>
