--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -58,6 +58,12 @@
          <groupId>com.google.guava</groupId>
          <artifactId>guava</artifactId>
       </dependency>
+
+      <dependency>
+         <groupId>net.logstash.logback</groupId>
+         <artifactId>logstash-logback-encoder</artifactId>
+      </dependency>
+
    </dependencies>
 
    <build>
