--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ build-jvm:
 #  image: maven:3.6.3-jdk-8
   stage: build
   script:
-    - 'mvn $MAVEN_CLI_OPTS clean install'
+    - 'mvn $MAVEN_CLI_OPTS clean install -PrunBenchmarkTests'
   artifacts:
     reports:
       junit:
