--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -16,17 +16,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.10",
+    "@angular/animations": "^8.2.9",
     "@angular/cdk": "^7.3.5",
-    "@angular/common": "^7.2.10",
-    "@angular/compiler": "^7.2.10",
-    "@angular/core": "^7.2.10",
-    "@angular/forms": "^7.2.10",
+    "@angular/common": "^8.2.9",
+    "@angular/compiler": "^8.2.9",
+    "@angular/core": "^8.2.9",
+    "@angular/forms": "^8.2.9",
     "@angular/http": "^7.2.10",
     "@angular/material": "^7.3.5",
-    "@angular/platform-browser": "^7.2.10",
-    "@angular/platform-browser-dynamic": "^7.2.10",
-    "@angular/router": "^7.2.10",
+    "@angular/platform-browser": "^8.2.9",
+    "@angular/platform-browser-dynamic": "^8.2.9",
+    "@angular/platform-server": "^8.2.9",
+    "@angular/router": "^8.2.9",
     "@covalent/core": "^2.0.1",
     "@covalent/dynamic-forms": "^2.0.1",
     "@covalent/highlight": "^2.1.1",
@@ -35,7 +36,7 @@
     "@swimlane/ngx-graph": "^5.5.0",
     "@types/angular": "^1.7.0",
     "class-transformer": "^0.2.0",
-    "core-js": "^2.5.4",
+    "core-js": "^3.1.3",
     "highlight.js": "^9.17.1",
     "http-status-codes": "^1.3.0",
     "immutable": "^3.8.2",
@@ -53,17 +54,17 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "rich-markdown-editor": "^9.11.2",
-    "rxjs": "^6.4.0",
+    "rxjs": "^6.5.0",
     "stream": "0.0.2",
     "tslib": "^1.9.0",
     "url-parse": "^1.4.4",
-    "zone.js": "~0.8.29"
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.13.9",
-    "@angular/cli": "~7.3.6",
-    "@angular/compiler-cli": "^7.2.10",
-    "@angular/language-service": "^7.2.10",
+    "@angular-devkit/build-angular": "^0.800.0",
+    "@angular/cli": "^8.3.0",
+    "@angular/compiler-cli": "^8.2.9",
+    "@angular/language-service": "^8.0.0",
     "@babel/core": "^7.7.7",
     "@storybook/addon-actions": "^5.3.14",
     "@storybook/addon-links": "^5.3.14",
@@ -89,7 +90,10 @@
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~3.2.4",
+    "typescript": "^3.4.5",
     "webpack-bundle-analyzer": "^3.8.0"
+  },
+  "peerDependencies": {
+    "typescript": "3.4.5"
   }
 }
