--- a/vyne-query-service/src/main/web/tsconfig.json
+++ b/vyne-query-service/src/main/web/tsconfig.json
@@ -20,5 +20,9 @@
       "dom",
       "esnext"
     ]
+  },
+  "angularCompilerOptions": {
+    "enableIvy": false,
+    "allowEmptyCodegenFiles": true
   }
 }
