--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -16,27 +16,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.9",
-    "@angular/cdk": "^7.3.5",
-    "@angular/common": "^8.2.9",
-    "@angular/compiler": "^8.2.9",
-    "@angular/core": "^8.2.9",
-    "@angular/forms": "^8.2.9",
+    "@angular/animations": "^9.0.0",
+    "@angular/cdk": "^9.0.0",
+    "@angular/common": "^9.0.0",
+    "@angular/compiler": "^9.0.0",
+    "@angular/core": "^9.0.0",
+    "@angular/forms": "^9.0.0",
     "@angular/http": "^7.2.10",
-    "@angular/material": "^7.3.5",
-    "@angular/platform-browser": "^8.2.9",
-    "@angular/platform-browser-dynamic": "^8.2.9",
-    "@angular/platform-server": "^8.2.9",
-    "@angular/router": "^8.2.9",
-    "@covalent/core": "^2.0.1",
+    "@angular/material": "^9.0.0",
+    "@angular/platform-browser": "^9.0.0",
+    "@angular/platform-browser-dynamic": "^9.0.0",
+    "@angular/platform-server": "^9.0.0",
+    "@angular/router": "^9.0.0",
+    "@covalent/core": "^2.1.1",
     "@covalent/dynamic-forms": "^2.0.1",
     "@covalent/highlight": "^2.1.1",
     "@materia-ui/ngx-monaco-editor": "^2.0.7",
     "@ng-select/ng-select": "^2.20.5",
-    "@swimlane/ngx-graph": "^5.5.0",
+    "@swimlane/ngx-charts": "^14.0.0",
+    "@swimlane/ngx-graph": "^7.0.0",
     "@types/angular": "^1.7.0",
     "class-transformer": "^0.2.0",
-    "core-js": "^3.1.3",
+    "core-js": "^3.6.5",
     "highlight.js": "^9.17.1",
     "http-status-codes": "^1.3.0",
     "immutable": "^3.8.2",
@@ -48,52 +49,57 @@
     "ngx-highlightjs": "^4.0.0",
     "ngx-markdown": "^8.2.2",
     "ngx-moment": "^3.4.0",
+    "ngx-monaco-editor": "^9.0.0",
     "npm": "^6.14.5",
     "path": "^0.12.7",
     "process": "^0.11.10",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "rich-markdown-editor": "^9.11.2",
-    "rxjs": "^6.5.0",
+    "rxjs": "^6.5.5",
     "stream": "0.0.2",
     "tslib": "^1.9.0",
     "url-parse": "^1.4.4",
-    "zone.js": "^0.9.1"
+    "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.800.0",
-    "@angular/cli": "^8.3.0",
-    "@angular/compiler-cli": "^8.2.9",
-    "@angular/language-service": "^8.0.0",
+    "@angular-devkit/build-angular": "^0.900.1",
+    "@angular/cli": "^9.0.0",
+    "@angular/compiler-cli": "^9.0.0",
+    "@angular/language-service": "^9.0.0",
     "@babel/core": "^7.7.7",
     "@storybook/addon-actions": "^5.3.14",
     "@storybook/addon-links": "^5.3.14",
     "@storybook/addon-notes": "^5.3.14",
     "@storybook/addons": "^5.3.14",
     "@storybook/angular": "^5.3.14",
-    "@types/jasmine": "~2.8.6",
+    "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^14.0.13",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "@types/react-select": "^3.0.10",
     "babel-loader": "^8.0.6",
-    "codelyzer": "~4.2.1",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
-    "karma-chrome-launcher": "~2.2.0",
+    "codelyzer": "^5.2.2",
+    "jasmine-core": "^3.5.0",
+    "jasmine-spec-reporter": "^5.0.2",
+    "karma": "^5.1.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "~2.0.0",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-jasmine": "^3.3.1",
+    "karma-jasmine-html-reporter": "^1.5.4",
     "node-sass": "4.13.0",
-    "protractor": "~5.3.0",
+    "protractor": "^7.0.0",
+    "rxjs-tslint": "^0.1.8",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1",
-    "typescript": "^3.4.5",
+    "tslint": "^6.1.2",
+    "typescript": "^3.7.2",
+    "webpack": "^4.43.0",
     "webpack-bundle-analyzer": "^3.8.0"
   },
   "peerDependencies": {
-    "typescript": "3.4.5"
+    "typescript": "3.6.4",
+    "tslib": "1.10.0"
   }
 }
