query history now shows vyneQl queries properly

--- a/vyne-query-service/src/main/web/tsconfig.json
+++ b/vyne-query-service/src/main/web/tsconfig.json
@@ -8,7 +8,7 @@
     "declaration": false,
     "module": "esnext",
     "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
+    "emitDecoratorMetadata": false,
     "experimentalDecorators": true,
     "target": "es2015",
     "jsx": "react",
