LENS-161 Setting Vyne log level to INFO, removing debug/info logs from critical path (logging only what's relevant), speeding up type projection.

--- a/vyne-query-service/src/main/resources/application.yml
+++ b/vyne-query-service/src/main/resources/application.yml
@@ -19,7 +19,7 @@ logging:
 
       com.netflix: WARN
       com.hazelcast: WARN
-      io.vyne: DEBUG
+      io.vyne: INFO
       org.apache.catalina: WARN
 eureka:
    client:
