--- a/vyne-query-service/src/main/web/angular.json
+++ b/vyne-query-service/src/main/web/angular.json
@@ -75,8 +75,8 @@
               "namedChunks": false,
               "aot": true,
               "extractLicenses": true,
-              "vendorChunk": false,
-              "buildOptimizer": true
+              "vendorChunk": true,
+              "buildOptimizer": false
             }
           }
         },
