--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -135,7 +135,7 @@
                      <goal>npm</goal>
                   </goals>
                   <configuration>
-                     <arguments>install</arguments>
+                     <arguments>ci</arguments>
                   </configuration>
                </execution>
                <execution>
