--- a/pipelines/pipeline-runner-core/pom.xml
+++ b/pipelines/pipeline-runner-core/pom.xml
@@ -94,6 +94,13 @@
       </dependency>
 
       <dependency>
+         <groupId>org.apache.kafka</groupId>
+         <artifactId>kafka_2.11</artifactId>
+         <version>2.0.1</version>
+         <scope>test</scope>
+      </dependency>
+
+      <dependency>
          <groupId>org.eclipse.jetty.websocket</groupId>
          <artifactId>websocket-server</artifactId>
          <scope>test</scope>
