--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
    <parent>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-parent</artifactId>
-      <version>2.2.6.RELEASE</version>
+      <version>2.3.1.RELEASE</version>
    </parent>
 
 
@@ -25,8 +25,8 @@
       <kotlin.version>1.3.50</kotlin.version>
       <java.version>1.8</java.version>
       <logback.version>1.1.10</logback.version>
-      <spring.cloud.version>Hoxton.SR4</spring.cloud.version>
-      <spring.cloud.netflix.version>2.2.2.RELEASE</spring.cloud.netflix.version>
+      <spring.cloud.version>Hoxton.SR5</spring.cloud.version>
+      <spring.cloud.netflix.version>2.2.3.RELEASE</spring.cloud.netflix.version>
       <arrow.version>0.10.4</arrow.version>
       <logstash.logback.version>6.4</logstash.logback.version>
    </properties>
@@ -204,25 +204,27 @@
             <type>pom</type>
             <scope>import</scope>
          </dependency>
+         <!-- https://mvnrepository.com/artifact/io.r2dbc/r2dbc-bom -->
          <dependency>
-            <groupId>com.fasterxml.jackson.module</groupId>
-            <artifactId>jackson-module-kotlin</artifactId>
-            <version>${jackson.version}</version>
+            <groupId>io.r2dbc</groupId>
+            <artifactId>r2dbc-bom</artifactId>
+            <version>Arabba-SR5</version>
+            <type>pom</type>
+            <scope>import</scope>
          </dependency>
          <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-core</artifactId>
-            <version>${jackson.version}</version>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-bom</artifactId>
+            <version>${micrometer.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
          </dependency>
          <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-annotations</artifactId>
-            <version>${jackson.version}</version>
-         </dependency>
-         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>${jackson.version}</version>
+            <groupId>com.fasterxml.jackson</groupId>
+            <artifactId>jackson-bom</artifactId>
+            <version>${jackson-bom.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
          </dependency>
          <dependency>
             <groupId>lang.taxi</groupId>
