--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,8 +56,8 @@ publish-snapshot:
   artifacts:
      paths:
         - "vyne-query-service/target/"
- # only:
- #   - develop
+  only:
+    - develop
 
 publish-release:
 #  image: maven:3.6.3-jdk-8
