--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,7 +38,7 @@ build-ui:
    stage: build
    script:
       # Only build the frontend. Nothing JVM related
-      - 'mvn $MAVEN_CLI_OPTS -DskipTests frontend:npm@run-npm-install frontend:npm@ng-build -f vyne-query-service/pom.xml'
+      - 'mvn $MAVEN_CLI_OPTS -DskipTests frontend:npm@install-npm frontend:npm@run-npm-install frontend:npm@ng-build -f vyne-query-service/pom.xml'
    artifacts:
       paths:
          - "vyne-query-service/target/classes/static"
