--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,10 +49,10 @@ publish-snapshot:
   script:
     - docker login -u vynecd -p $DOCKER_HUB_PASSWORD
 
-     # Don't need to run tests or build UI as they were run in the previous stage
-    - 'mvn $MAVEN_CLI_OPTS -DskipTests -Dskip.npm package docker:build ' # FIXME docker:build -> deploy -P snapshot-releases
- # only:
-  #  - develop
+     # Don't need to run tests or build UI as they were run in the previous stage and are inluded via artifacts
+    - 'mvn $MAVEN_CLI_OPTS -DskipTests -Dskip.npm deploy -P snapshot-releases '
+  only:
+    - develop
 
 
 publish-release:
